# mcpls

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  deny.toml  rustfmt.toml
.config/: nextest.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/instructions/: changelog.instructions.md  ci.instructions.md  mcp-tools.instructions.md  rust-bridge.instructions.md  rust-config.instructions.md  tests.instructions.md
.github/workflows/: ci.yml  codeql.yml  dependabot-automerge.yml  labeler.yml  release.yml
crates/mcpls-cli/: Cargo.toml  README.md
crates/mcpls-cli/src/: args.rs  logging.rs  main.rs
crates/mcpls-cli/tests/: cli_integration.rs
crates/mcpls-core/: Cargo.toml  README.md
crates/mcpls-core/src/: error.rs  lib.rs  transport.rs
crates/mcpls-core/src/bridge/: encoding.rs  mod.rs  notifications.rs  resources.rs  state.rs  translator.rs
crates/mcpls-core/src/config/: mod.rs  server.rs
crates/mcpls-core/src/lsp/: client.rs  file_watcher.rs  lifecycle.rs  mod.rs  transport.rs  types.rs
crates/mcpls-core/src/mcp/: handlers.rs  mod.rs  server.rs  tools.rs
crates/mcpls-core/tests/: integration_tests.rs  ra_e2e.rs
crates/mcpls-core/tests/common/: assertions.rs  mock_lsp.rs  mod.rs  ra_probe.rs  test_utils.rs
crates/mcpls-core/tests/e2e/: mcp_client.rs  mod.rs  protocol_tests.rs
crates/mcpls-core/tests/fixtures/: empty_config.toml
crates/mcpls-core/tests/fixtures/configs/: minimal.toml  multi_language.toml
crates/mcpls-core/tests/fixtures/golden/: bad_format.fmt.rs
crates/mcpls-core/tests/fixtures/rust_workspace/: Cargo.toml
crates/mcpls-core/tests/fixtures/rust_workspace/extras/: bad_format.rs  broken.rs
crates/mcpls-core/tests/fixtures/rust_workspace/src/: functions.rs  lib.rs  types.rs
crates/mcpls-core/tests/integration/: basic_tests.rs  mod.rs  rust_analyzer_tests.rs
docs/adr/: 000-template.md  0001-external-file-changes.md  001-workspace-structure.md  002-error-handling.md  003-async-runtime.md  004-position-encoding.md  005-document-state.md  006-configuration-format.md  007-notification-handling.md
docs/user-guide/: configuration.md  getting-started.md  installation.md  tools-reference.md  troubleshooting.md
examples/: mcpls.toml
