[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["MCPLS Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bug-ops/mcpls"
homepage = "https://github.com/bug-ops/mcpls"
description = "Universal MCP to LSP bridge - expose Language Server Protocol capabilities as MCP tools"
keywords = ["mcp", "lsp", "language-server", "ai", "claude"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
# Core dependencies
rmcp = { version = "0.12", features = ["server", "transport-io", "macros"] }
lsp-types = "0.97"
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
toml = "0.8"
dirs = "6.0"

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Testing
rstest = "0.26"
tempfile = "3.15"
assert_cmd = "2.0"
predicates = "3.1"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
