[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.3.4"
edition = "2024"
rust-version = "1.85"
authors = ["Andrei G. <k05h31@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bug-ops/mcpls"
homepage = "https://github.com/bug-ops/mcpls"
description = "Universal MCP to LSP bridge - expose Language Server Protocol capabilities as MCP tools"
keywords = ["mcp", "lsp", "language-server", "ai", "claude"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
# Sorted alphabetically
anyhow = "1.0"
assert_cmd = "2.1"
async-trait = "0.1"
chrono = "0.4.44"
clap = "4.5"
dirs = "6.0"
futures = "0.3"
ignore = "0.4"
lsp-types = "0.97"
mcpls-core = { path = "crates/mcpls-core", version = "0.3.4" }
predicates = "3.1"
rmcp = "0.16"
rstest = "0.26"
schemars = "1.2"
serde = "1.0"
serde_json = "1.0"
tempfile = "3.26"
thiserror = "2.0"
tokio = "1.49"
toml = "1.0"
tracing = "0.1"
url = "2.5"
tracing-subscriber = "0.3"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
