[package]
name = "mcpls"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Universal MCP to LSP bridge CLI - expose Language Server Protocol capabilities as MCP tools"
keywords = ["mcp", "lsp", "language-server", "cli", "claude"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "mcpls"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
mcpls-core = { path = "../mcpls-core" }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
