[package]
name = "mcpls-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for MCP to LSP protocol translation"
keywords = ["mcp", "lsp", "language-server", "protocol"]
categories = ["development-tools"]

[dependencies]
rmcp.workspace = true
lsp-types.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
futures.workspace = true
toml.workspace = true
dirs.workspace = true

[dev-dependencies]
rstest.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }
anyhow.workspace = true

[lints]
workspace = true
