[package]
name = "mcpls-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for MCP to LSP protocol translation"
keywords = ["mcp", "lsp", "language-server", "protocol"]
categories = ["development-tools"]

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
ignore = { workspace = true }
lsp-types = { workspace = true }
rmcp = { workspace = true, features = ["server", "transport-io", "macros"] }
axum = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true, features = ["rt"] }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[features]
default = []
transport-http = [
    "rmcp/transport-streamable-http-server",
    "dep:axum",
    "dep:tokio-util",
]

[lints]
workspace = true
